# spherex_ros

./: .gitignore
spherex/: .default.launch.swp  .spherex_ctrl.py.swp  CMakeLists.txt  default.launch  lidar_stream.py  package.xml  spherex_ctrl.py
spherex/include/: consts.h  ekf.hpp
spherex/nbproject/: configurations.xml  project.xml
spherex/nbproject/private/: Default.properties  configurations.xml  private.xml
spherex/scripts/: .lidar_stream.py.swp  .main.py.swp  lidar_stream.py  main.py
spherex/src/: .lidar_stream.py.swp  ekf.cpp  forces.cpp  main.cpp
spherex/src/spherex_pcl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp
spherex/src/spherex_pcl/nbproject/: configurations.xml  project.xml
spherex/src/spherex_pcl/nbproject/private/: Default.properties  configurations.xml
spherex/urdf/: model.urdf
