cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_if)
find_package(PCL 1.3 REQUIRED COMPONENTS common io)
find_package(catkin REQUIRED COMPONENTS roscpp)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_if main.cpp)
target_link_libraries(pcl_if ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
